--- a/view/MainMenu.fxml
+++ b/view/MainMenu.fxml
@@ -10,9 +10,10 @@
             prefHeight="400.0" prefWidth="600.0"
           alignment="CENTER">
 
-    <VBox alignment="CENTER" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="1">
+    <VBox styleClass=".menuVbox" alignment="CENTER" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="1">
         <Label text="Boggle!" GridPane.columnIndex="1" GridPane.rowIndex="0" alignment="CENTER"/>
         <Button fx:id="playButton" text = "Play" GridPane.columnIndex="0" GridPane.rowIndex="1" alignment="CENTER"
+
             />
         <Button fx:id="highScoresButton" text = "High Scores" GridPane.columnIndex="0" GridPane.rowIndex="2" alignment="CENTER"/>
 
